--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,11 +22,11 @@ dependencies:
   get_it:
   get:
   cupertino_icons: ^1.0.2
+  protobuf: ^3.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  protobuf:
   flutter_lints: ^2.0.0
   test:
 
